--- a/src/pages/About/Style.css
+++ b/src/pages/About/Style.css
@@ -5,57 +5,15 @@
 }
 
 .content {
-    margin-top: 2rem;
-}
-
-.followers {
     margin-top: 5rem;
+    align-items: center;
 }
 
-.title {
+p {
+    font-size: 1.1rem;
+}
+
+h1 { 
     font-weight: 700;
-    font-size: 2rem;
-}
-
-.github {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.twitter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.github p{
-   margin-top: 15px;
-   font-size: 18px;
-}
-
-.twitter p{
-    margin-top: 15px;
-    font-size: 18px;
- }
- 
-
-.bio {
-    font-size: 18px;
-}
-
-.social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-}
-
-.profile {
-    display: flex;
-    margin-bottom: 2rem;
-    margin-top: 3rem;
-    gap: 2rem;
+    font-size: 1.5rem; 
 }
