--- a/src/pages/Home/Style.css
+++ b/src/pages/Home/Style.css
@@ -5,6 +5,57 @@
 }
 
 .content {
+    margin-top: 2rem;
+}
+
+.followers {
     margin-top: 5rem;
+}
+
+.title {
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.github {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
+}
+
+.twitter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.github p{
+   margin-top: 15px;
+   font-size: 18px;
+}
+
+.twitter p{
+    margin-top: 15px;
+    font-size: 18px;
+ }
+ 
+
+.bio {
+    font-size: 18px;
+}
+
+.social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.profile {
+    display: flex;
+    margin-bottom: 2rem;
+    margin-top: 3rem;
+    gap: 2rem;
 }
